force-app/main/default/objects/IdeaPost__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>アイデア本文</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>カテゴリ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IdeaCategories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>完了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>コミュニティ名</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MergeOriginalIdeasPoints__c</fullName>
        <defaultValue>(0)</defaultValue>
        <inlineHelpText>マージ元アイデア投票の合計</inlineHelpText>
        <label>マージ元アイデアポイント合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentIdeaFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>マージ先として指定されている場合、チェック有
マージ先として指定されていない場合、チェック無</description>
        <inlineHelpText>マージ先として指定されている場合、チェック有
マージ先として指定されていない場合、チェック無</inlineHelpText>
        <label>親アイデアフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentIdea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>マージしたいアイデアを選択してください。</inlineHelpText>
        <label>マージ先アイデア</label>
        <referenceTo>IdeaPost__c</referenceTo>
        <relationshipLabel>アイデア投稿</relationshipLabel>
        <relationshipName>ref_IdeaPost_ParentIdea</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PointGrandTotal__c</fullName>
        <formula>PointsTotal__c+MergeOriginalIdeasPoints__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>「マージ元アイデア合計」＋「アイデアポイント合計」の合算値</inlineHelpText>
        <label>ポイント総合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PointsTotal__c</fullName>
        <description>当アイデアの投票合計値を保持</description>
        <inlineHelpText>当アイデアの投票合計</inlineHelpText>
        <label>アイデアポイント合計</label>
        <summarizedField>Vote__c.Points__c</summarizedField>
        <summaryForeignKey>Vote__c.IdeaPost__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PostFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>公開済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状況</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IdeaStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>タイトル</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>アイデア投稿</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Title__c</columns>
        <columns>Categories__c</columns>
        <columns>Status__c</columns>
        <columns>Body__c</columns>
        <columns>ParentIdea__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PostFlag__c</columns>
        <columns>PointGrandTotal__c</columns>
        <columns>PointsTotal__c</columns>
        <columns>MergeOriginalIdeasPoints__c</columns>
        <columns>Close__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>MergeIdeaList</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Title__c</columns>
        <columns>Categories__c</columns>
        <columns>Status__c</columns>
        <columns>Body__c</columns>
        <columns>ParentIdea__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PostFlag__c</columns>
        <columns>PointGrandTotal__c</columns>
        <columns>PointsTotal__c</columns>
        <columns>MergeOriginalIdeasPoints__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ParentIdeaFlg__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>マージ先アイデア一覧</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>管理No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_CanNotMerge</fullName>
        <active>true</active>
        <description>アイデアマージ階層は1階層とするため、マージ先として指定されているアイデアに、マージ先アイデアを設定した場合と、子アイデアを親アイデアに指定した場合、エラーとして制御する。</description>
        <errorConditionFormula>AND(NOT(ISBLANK(ParentIdea__c))
       , OR(NOT(ISBLANK(ParentIdea__r.ParentIdea__c))
             , ParentIdeaFlg__c
        ) 
)</errorConditionFormula>
        <errorDisplayField>ParentIdea__c</errorDisplayField>
        <errorMessage>既に当アイデアはマージ先として指定されているか、またはマージ先アイデアに入力したアイデアがマージ済のため、マージ先アイデアを設定することはできません。</errorMessage>
    </validationRules>
</CustomObject>